# Tablo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-containers.sh  build-image-nix.sh  build-image.sh  build-proto.sh  dev.Dockerfile  dev.compose.yml  flake.nix  nix.compose.yml  prod.Dockerfile  prod.compose.yml
TCTest/: CMakeLists.txt
TCTest/src/: main.cpp  tabcrypt_test.h
TabloClient/: CMakeLists.txt
TabloClient/src/: tabloClient.cpp
TabloClient/src/utils/: argv_struct.h  cli.cpp  cli.h  network_manager.cpp  network_manager.h  networking.cpp  networking.h
TabloMaster/: CMakeLists.txt
TabloMaster/src/: tabloMaster.cpp
TabloMaster/src/ui/: main_window.cpp  main_window.h
TabloMaster/src/utils/: client_session_controller.cpp  client_session_controller.h  methods.h  network_helpers.cpp  network_helpers.h  network_manager.cpp  network_manager.h  networking.cpp  networking.h  node_session_controller.cpp  node_session_controller.h  socket.cpp  socket.h  udp_discovery.cpp  udp_discovery.h
TabloNode/: CMakeLists.txt
TabloNode/src/: tabloNode.cpp
TabloNode/src/utils/: csv_manager.cpp  csv_manager.h  network_helpers.cpp  network_helpers.h  network_manager.cpp  network_manager.h  networking.cpp  networking.h  socket.cpp  socket.h  udp_discovery.cpp  udp_discovery.h  worker.cpp  worker.h
TabloNode/utils/: worker.h
lib/libtabcrypt/: CMakeLists.txt  flake.nix
lib/libtabcrypt/include/: libtabcrypt.h  tabcrypt.h
lib/libtabcrypt/src/: libtabcrypt.cpp  tabcrypt.cpp
lib/libtablog/: CMakeLists.txt
lib/libtablog/include/: tablog.h
lib/libtablog/src/: tablog.cpp
lib/libtabnet/: CMakeLists.txt
lib/libtabnet/include/: methods.h  tabnet.h
lib/libtabnet/src/: tabnet.cpp
lib/libtabnet/src/protobuf/: transfer_protocol.pb.cc  transfer_protocol.pb.h  transfer_protocol.proto  transfere_protocol.pb.cc  transfere_protocol.pb.h  transfere_protocol.proto
src/TabloClient/: tabloClient.cpp
src/TabloMaster/: tabloMaster.cpp
src/TabloMaster/utils/: socket.h
src/TabloNode/: Dockerfile  compose.yml  tabloNode.cpp
src/TabloNode/utils/: socket.cpp  socket.h
src/TabloTestClient/: testClient.cpp
